[package]
name = "hello_resut_1"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"  # web framework for building HTTP apis
tokio = {version = "1", features = ["full"]} # async runtime used by actix and sqlx
serde = {version = "1.0", features = ["derive"]} # for parsing the json
serde_json = "1.0" # its dealing with json values
sqlx = {version = "0.7", features = ["mysql", "runtime-tokio", "macros", "uuid"]} # helpful for support the mysql
dotenvy = "0.15" # load .env variables
uuid = {version = "1", features = ["v4"]} # generate the uuid for unique id creation for user
validator = { version = "0.16", features = ["derive"] }
validator_derive = "0.16"
argon2 = "0.5"
rand = "0.8"          # Make sure you're using the full rand crate
password-hash = "0.5" # Should be the same version used by argon2
